# datafusion-uba

./: Cargo.toml  README.md
.github/workflows/: rust.yml
ci/scripts/: rust_docs.sh
examples/: retention.rs  retention_parquet.rs
src/: lib.rs  retention.rs  simple_udaf.rs
src/retention/: mod.rs  retention_count.rs  retention_sum.rs
src/test_util/: mod.rs
tests/: retention_count.rs  retention_sum.rs  test_with_minio.rs
tests/sqllogictests/src/: main.rs
tests/sqllogictests/src/engines/: conversion.rs  mod.rs
tests/sqllogictests/src/engines/datafusion/: normalize.rs
tests/sqllogictests/test_files/: retention.slt
tests/test_util/: mod.rs
