[package]
name = "datafusion-uba"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = { version = "43.0.0" }
datafusion = { version = "28.0.0" }
datafusion-common = { version = "28.0.0" }
datafusion-expr = { version = "28.0.0" }
datafusion-proto = { version = "28.0.0" }
datafusion-sql = { version = "28.0.0" }
futures = "0.3"
itertools = "0.11"
lazy_static = { version = "^1.4.0" }
log = "^0.4"
num_cpus = "1.13.0"
object_store = { version = "0.6.1", features = ["aws"] }
sqlparser = { version = "0.36.1" }
tempfile = "3"
tokio = { version = "1.29", features = ["macros", "parking_lot", "sync"] }


[dev-dependencies]
async-trait = "0.1.53"
bigdecimal = "0.4.1"
env_logger = "0.10"
half = "2.2.1"
rust_decimal = { version = "1.27.0", features = ["tokio-pg"] }
sqllogictest = "0.15.0"
thiserror = "1.0.37"
url = "2.2"


[[test]]
harness = false
name = "sqllogictests"
path = "tests/sqllogictests/src/main.rs"


[[example]]
name = "retention"
path = "examples/retention.rs"
